--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<script src="https://kit.fontawesome.com/3a705d7acc.js" crossorigin="anonymous"></script>
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</head>
+	<body>
+		{% block header %}
+			<header>
+				<nav>
+					<h1>
+						<a href="{{path('home')}}">Koinonia</a>
+					</h1>
+					<ul>
+						<li><a href="logout">Logout</a></li>
+						<li><a href="login">Login</a></li>
+					</ul>
+				</nav>
+			</header>
+		{% endblock %}
+		<main>
+			<aside>
+				{% block user %}
+					{% if is_granted('IS_AUTHENTICATED_FULLY')%}
+						<img src="{{ asset('download/logo/' ~ app.user.avatar ) }}" alt="avatar">
+						<p>{{app.user.username}}</p>
+						<a href="{{path('addpost')}}">Poster</a>
+					{% endif %}
+				{% endblock %}
+			</aside>
+			<div class="wrapp"> {% block main %}{% endblock %}
+				</div>
+
+			</main>
+		</body>
+	</html>
+</body></html></body></html>
